--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "pug": "^2.0.0-rc.4"
   }
 }
