--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/artifcat/absinthe#readme",
   "dependencies": {
+    "async": "^2.6.0",
     "backbone": "^1.3.3",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
+    "mongodb": "^3.0.1",
     "pug": "^2.0.0-rc.4"
   }
 }
