--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "async": "^2.6.0",
     "backbone": "^1.3.3",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
     "mongodb": "^3.0.1",
+    "multer": "^1.3.0",
     "pug": "^2.0.0-rc.4"
   }
 }
