--- a/package.json
+++ b/package.json
@@ -23,10 +23,17 @@
     "async": "^2.6.0",
     "backbone": "^1.3.3",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "jquery": "^3.2.1",
     "mongodb": "^3.0.1",
+    "mongoose": "^5.0.0-rc1",
     "multer": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.4.0",
     "pug": "^2.0.0-rc.4"
   }
 }
