--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/artifcat/absinthe#readme",
   "dependencies": {
-    "async": "^2.6.0",
     "backbone": "^1.3.3",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
@@ -30,7 +29,7 @@
     "jquery": "^3.2.1",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.0-rc1",
-    "multer": "^1.3.0",
+    "node-thumbnail": "^0.13.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
