--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.2.1",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.0-rc1",
+    "multer": "^1.3.0",
     "node-thumbnail": "^0.13.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
