--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.0-rc1",
     "multer": "^1.3.0",
-    "node-thumbnail": "^0.13.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "sharp": "^0.18.4"
   }
 }
