--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/artifcat/absinthe#readme",
   "dependencies": {
     "backbone": "^1.3.3",
+    "backbone.paginator": "^2.0.6",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
